--- a/my-app/src/screens/homeScreen/index.scss
+++ b/my-app/src/screens/homeScreen/index.scss
@@ -1,9 +1,35 @@
 .home-container {
     background-color: orange;
-    height: 100vh;
+    height: 100vh; 
     display: grid;
     grid-template-columns: 2fr 3fr;
     .left-container {
         background-color: #1e1e1e;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .items-container {
+            color: white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+            button {
+                background-color: #EDEADE;
+                cursor: pointer;
+                border : none;
+                height: 40px;
+                width: 60%;
+                border-radius: 20px;
+                transition-duration: 0.3s;
+                font-size: 20px;
+                display: flex; //used to fix the + icon and text not lining up
+                align-items: center;
+                justify-content: center;
+            }
+            button:hover {
+                box-shadow: 0 0 6px #F0F0F0;
+            }
+        }
     }
 }
